--- a/.vitepress/theme/smartisan-notes-like-theme/styles/components/sn.css
+++ b/.vitepress/theme/smartisan-notes-like-theme/styles/components/sn.css
@@ -82,6 +82,15 @@
   }
 }
 
+.sn h1+p,
+.sn h2+p,
+.sn h3+p,
+.sn h4+p,
+.sn h5+p,
+.sn h6+p {
+  padding-top: 0;
+}
+
 /**
  * not pre code
  * -------------------------------------------------------------------------- */
