--- a/.vitepress/theme/smartisan-notes-like-theme/styles/components/sn.css
+++ b/.vitepress/theme/smartisan-notes-like-theme/styles/components/sn.css
@@ -1,4 +1,18 @@
 /**
+ * div
+ * -------------------------------------------------------------------------- */
+
+.sn>div {
+  line-height: var(--md-text-height-mobile);
+}
+
+@media (min-width: 768px) {
+  .sn>div {
+    line-height: var(--md-text-height);
+  }
+}
+
+/**
  * h
  * -------------------------------------------------------------------------- */
 
@@ -67,7 +81,8 @@
  * -------------------------------------------------------------------------- */
 
 .sn p {
-  padding: var(--md-text-height-mobile) 0 0 0;
+  /* padding: var(--md-text-height-mobile) 0 0 0; */
+  padding: 0 0 0 0;
   line-height: var(--md-text-height-mobile);
 }
 
@@ -77,7 +92,8 @@
 
 @media (min-width: 768px) {
   .sn p {
-    padding: var(--md-text-height) 0 0 0;
+    /* padding: var(--md-text-height) 0 0 0; */
+    padding: 0 0 0 0;
     line-height: var(--md-text-height);
   }
 }
@@ -383,7 +399,7 @@
 
 .sn table {
   margin-top: var(--md-text-height);
-  /* margin-bottom: calc(var(--md-text-height) * 1); */
+  margin-bottom: calc(var(--md-text-height) * 1);
   border-collapse: collapse;
   overflow-x: auto;
   background: #fefcf7;
@@ -405,7 +421,7 @@
 @media (max-width: 768px) {
   .sn table {
     margin-top: var(--md-text-height-mobile);
-    /* margin-bottom: calc(var(--md-text-height-mobile) * 1); */
+    margin-bottom: calc(var(--md-text-height-mobile) * 1);
   }
 }
 
